@@ -7,14 +7,14 @@
  **/
 
 static unsigned short gmime_special_table[256] = {
-	   5,   5,   5,   5,   5,   5,   5,   5,   5,1127,   7,   5,   5,  39,   5,   5,
-	   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,   5,
-	1266, 960,  76, 704, 704, 192, 704, 192,  76,  76, 448, 960,  76, 960, 584, 324,
-	 960, 960, 960, 960, 960, 960, 960, 960, 960, 960,  76,  76,  76, 260,  76,  68,
-	  76, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960,
-	 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 108, 236, 108, 704, 832,
-	 704, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960,
-	 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 960, 704, 704, 704, 704,   5,
+	1029,1029,1029,1029,1029,1029,1029,1029,1029,3175,1031,1029,1029,1063,1029,1029,
+	1029,1029,1029,1029,1029,1029,1029,1029,1029,1029,1029,1029,1029,1029,1029,1029,
+	3314,1984,1100,1728,1728,1216,1728,1216,1100,1100,1472,1984,1100,1984,1608,1348,
+	1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1100,1100,1100,1284,1100,1092,
+	1100,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,
+	1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1132,1260,1132,1728,1856,
+	1728,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,
+	1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1984,1728,1728,1728,1728,1029,
 	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
 	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
 	   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
@@ -38,7 +38,8 @@ enum {
 	IS_ATTRCHAR = (1 << 9),  /* attribute-char from rfc2184 */
 	
 	/* ctype replacements */
-	IS_BLANK    = (1 << 10), /* space or tab */
+	IS_ASCII    = (1 << 10), /* ascii */
+	IS_BLANK    = (1 << 11), /* space or tab */
 };
 
 #define is_ctrl(x) ((gmime_special_table[(unsigned char)(x)] & IS_CTRL) != 0)
@@ -55,6 +56,7 @@ enum {
 #define is_attrchar(x) ((gmime_special_table[(unsigned char)(x)] & IS_ATTRCHAR) != 0)
 
 /* ctype replacements */
+#define is_ascii(x) ((gmime_special_table[(unsigned char)(x)] & IS_ASCII) != 0)
 #define is_blank(x) ((gmime_special_table[(unsigned char)(x)] & IS_BLANK) != 0)
 
 #define CHARS_LWSP " \t\n\r"               /* linear whitespace chars */
